--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,19 @@
 <!doctype html>
-<html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+    <title>Substack • Flux • TodoMVC</title>
+	 <link rel="stylesheet" href="todomvc-common/base.css">
+    <link rel="stylesheet" href="css/app.css">
+<head>
   <body>
     <div id="content"></div>
+    <footer id="info">
+        <p>Double-click to edit a todo</p>
+        <p><a href="https://github.com/Morgantheplant/react-starter">Subtack react-starter</a> & <a href="http://facebook.com/bill.fisher.771">Bill Fisher's</a> TodoMVC</p>
+        </ul>
+      <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+    </footer>
     <script src="bundle.js"></script>
   </body>
 </html>
